--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://github.com/Riyadh-Mclane-V-Datangel/room-page",
+  "homepage": "https://github.com/Riyadh-Mclane-V-Datangel/https---github.com-Riyadh-Mclane-V-Datangel-room-page",
   "name": "room-page",
   "version": "0.1.0",
   "private": true,
